Fix Bug 279079: WebDriver cookies failing to store

WebDriver cookie setting was failing because it used the wrong libsoup API.
The setCookie function used soup_cookie_jar_add_cookie() which doesn't emit
the 'changed' signal, while setCookieFromDOM used soup_cookie_jar_add_cookie_full()
which properly emits the signal.

Fixed by modifying WebCookieManager::setCookie() to use storageSession->setCookies()
with URL context instead of storageSession->setCookie() for each cookie individually.
This ensures WebDriver cookies use the same libsoup API as JavaScript cookies.

Added a layout test to verify the cookie storage infrastructure is working properly.

https://bugs.webkit.org/show_bug.cgi?id=279079